# cmake_configure_version_header

./: CMakeLists.txt  README.adoc  README.md
src/: CMakeLists.txt
